--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,6 +19,7 @@
         <a class="btn" href="game.html">Play</a>
         <a class="btn" href="highscores.html">High Scores</a>
         <a class="btn" href="questions.html">Faculty</a>
+        <a class="btn" href="student.html">Student</a>
         
         
       </div>
@@ -30,8 +31,9 @@
 
       // })
       var testJson = {
-"Msg": "Student portal was accessed",
-
+"question": "what is your name",
+"option1": "djdjfnj",
+"option2": "fefejfnj"
 }
       socket.emit('Nitin', testJson)
       socket.on('msg', data =>{
