--- a/Frontend/game.html
+++ b/Frontend/game.html
@@ -7,8 +7,15 @@
     <title>Quick Quiz - Play</title>
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/game.css" />
+    <link rel="stylesheet" href="css/question.css" />
   </head>
   <body>
+    <div class="main">
+      <div class="nav-bar">
+          <div class="nav-item"><a href="index.html">Home</a></div>
+          <div class="nav-item"><a href="end.html">End Quiz</a></div>
+          <div class="nav-item"><a href="highscores.html">Results</a></div>
+      </div>
     <div class="container">
       <div id="loader"></div>
       <div id="game" class="justify-center flex-column hidden">
