--- a/Frontend/highscores.html
+++ b/Frontend/highscores.html
@@ -15,7 +15,7 @@
         <h1 id="finalScore">High Scores for students</h1>
         <ul id="highScoresList"></ul>
         <a class="btn" href="/">Go Home</a>
-        <a class="btn" href="/">Detailed Scores</a>
+        <a class="btn" href="results.html">Detailed Scores</a>
       </div>
     </div>
     <!-- //functionality -->
